[package]
name = "sarek"
version = "0.1.0"
description = "Vulkan library for Rust"
authors = ["Mike Dilger <mike@optcomp.nz>"]
readme = "README.md"
repository = "https://github.com/mikedilger/sarek"
license = "MIT or Apache-2.0"
keywords = [ "vulkan" ]

[dependencies]
winit = "0.5"
image = "0.10"
libc = "0.2.21"

[dependencies.vk-sys]
git = "https://gitlab.com/dennis-hamester/vk-sys.git"
default-features = false

[target.'cfg(windows)'.dependencies]
user32-sys = "0.2"
winapi = "0.2"

[features]
default = [ "vk_1_0_48" ]
vk_1_0_48 = [ "vk-sys/vk_1_0_48", "vk_1_0_47" ]
vk_1_0_47 = [ "vk-sys/vk_1_0_47", "vk_1_0_46" ]
vk_1_0_46 = [ "vk-sys/vk_1_0_46", "vk_1_0_45" ]
vk_1_0_45 = [ "vk-sys/vk_1_0_45", "vk_1_0_44" ]
vk_1_0_44 = [ "vk-sys/vk_1_0_44", "vk_1_0_43" ]
vk_1_0_43 = [ "vk-sys/vk_1_0_43", "vk_1_0_42" ]
vk_1_0_42 = [ "vk-sys/vk_1_0_42", "vk_1_0_41" ]
vk_1_0_41 = [ "vk-sys/vk_1_0_41", "vk_1_0_40" ]
vk_1_0_40 = [ "vk-sys/vk_1_0_40", "vk_1_0_39" ]
vk_1_0_39 = [ "vk-sys/vk_1_0_39", "vk_1_0_38" ]
vk_1_0_38 = [ "vk-sys/vk_1_0_38", "vk_1_0_37" ]
vk_1_0_37 = [ "vk-sys/vk_1_0_37", "vk_1_0_36" ]
vk_1_0_36 = [ "vk-sys/vk_1_0_36", "vk_1_0_35" ]
vk_1_0_35 = [ "vk-sys/vk_1_0_35", "vk_1_0_34" ]
vk_1_0_34 = [ "vk-sys/vk_1_0_34", "vk_1_0_33" ]
vk_1_0_33 = [ "vk-sys/vk_1_0_33", "vk_1_0_32" ]
vk_1_0_32 = [ "vk-sys/vk_1_0_32", "vk_1_0_31" ]
vk_1_0_31 = [ "vk-sys/vk_1_0_31", "vk_1_0_30" ]
vk_1_0_30 = [ "vk-sys/vk_1_0_30", "vk_1_0_29" ]
vk_1_0_29 = [ "vk-sys/vk_1_0_29", "vk_1_0_28" ]
vk_1_0_28 = [ "vk-sys/vk_1_0_28", "vk_1_0_27" ]
vk_1_0_27 = [ "vk-sys/vk_1_0_27", "vk_1_0_26" ]
vk_1_0_26 = [ "vk-sys/vk_1_0_26", "vk_1_0_25" ]
vk_1_0_25 = [ "vk-sys/vk_1_0_25", "vk_1_0_24" ]
vk_1_0_24 = [ "vk-sys/vk_1_0_24", "vk_1_0_23" ]
vk_1_0_23 = [ "vk-sys/vk_1_0_23", "vk_1_0_22" ]
vk_1_0_22 = [ "vk-sys/vk_1_0_22", "vk_1_0_21" ]
vk_1_0_21 = [ "vk-sys/vk_1_0_21", "vk_1_0_20" ]
vk_1_0_20 = [ "vk-sys/vk_1_0_20", "vk_1_0_19" ]
vk_1_0_19 = [ "vk-sys/vk_1_0_19", "vk_1_0_18" ]
vk_1_0_18 = [ "vk-sys/vk_1_0_18", "vk_1_0_17" ]
vk_1_0_17 = [ "vk-sys/vk_1_0_17", "vk_1_0_16" ]
vk_1_0_16 = [ "vk-sys/vk_1_0_16", "vk_1_0_15" ]
vk_1_0_15 = [ "vk-sys/vk_1_0_15", "vk_1_0_14" ]
vk_1_0_14 = [ "vk-sys/vk_1_0_14", "vk_1_0_13" ]
vk_1_0_13 = [ "vk-sys/vk_1_0_13", "vk_1_0_12" ]
vk_1_0_12 = [ "vk-sys/vk_1_0_12", "vk_1_0_11" ]
vk_1_0_11 = [ "vk-sys/vk_1_0_11", "vk_1_0_10" ]
vk_1_0_10 = [ "vk-sys/vk_1_0_10", "vk_1_0_9" ]
vk_1_0_9 = [ "vk-sys/vk_1_0_9", "vk_1_0_8" ]
vk_1_0_8 = [ "vk-sys/vk_1_0_8", "vk_1_0_7" ]
vk_1_0_7 = [ "vk-sys/vk_1_0_7", "vk_1_0_6" ]
vk_1_0_6 = [ "vk-sys/vk_1_0_6", "vk_1_0_5" ]
vk_1_0_5 = [ "vk-sys/vk_1_0_5", "vk_1_0_4" ]
vk_1_0_4 = [ "vk-sys/vk_1_0_4", "vk_1_0_3" ]
vk_1_0_3 = [ "vk-sys/vk_1_0_3" ]
